# Smart_assistant

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  requirements.txt
docs/: PYTHON_ANALYSIS_AGENT.md  QUICKSTART_PYTHON_ANALYSIS.md  azure-deployment-guide.md  local-development.md
financial-insights-agents/: .env.example  README.md  README_PYTHON_ANALYSIS.md  pyproject.toml  setup_python_analysis.sh
financial-insights-agents/agents/: python_analysis_agent.py
financial-insights-agents/agents/data_analyst_agent/code_templates/: financial_templates.py
financial-insights-agents/core/: __init__.py  config.py  exceptions.py  logging.py
financial-insights-agents/database/sample_schema/: create_tables.sql  seed_data.sql
financial-insights-agents/examples/: python_analysis_demo.py
financial-insights-agents/mcp_servers/: mcp_client.py
financial-insights-agents/mcp_servers/mssql_server/: __init__.py  connection_pool.py  requirements.txt  server.py
financial-insights-agents/tools/analytics/: __init__.py  code_generator.py  result_processor.py  safety_validator.py
financial-insights-agents/tools/analytics/sandbox/: .dockerignore  Dockerfile  __init__.py  docker-compose.yml  executor.py  requirements.txt
financial-insights-agents/tools/visualization/: plot_helpers.py
frontend/: README.md  index.html  package.json
frontend/src/: App.css  App.tsx  index.css
